--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@cds/city": "^1.1.0",
     "@cds/core": "^5.5.3",
+    "magic-sdk": "^5.1.0",
     "sirv-cli": "^1.0.0"
   }
 }
